# Piecad

./: .gitignore  DOCS  LICENSE  Makefile  README.md  docs  package_install  pyproject.toml  pyvenv.cfg  requirements.txt  setup  text.py
.benchmarks/Linux-CPython-3.10-64bit/: 0001_2024-01-20.json  0001_2024-01-29.json  0001_2024-02-02after_hull_fix.json  0002_2024-01-20.json  0002_2024-01-21.json  0002_2024-02-01.json  (+21 more)
doc_examples/: .create_example.py.swp  cylinder.example  extrude.example  extrude_chaining.example  extrude_chaining_rr.example  extrude_simple.example  extrude_transforming.example  intersect3d.example  mk_doc_examples  path.example  polygon.example  process_example.py  project_box.example  revolve.example  sphere.example  union3d.example
docs/: index.html  path.html  primitives_2d.html  primitives_3d.html
examples/: LidHolder.py  NeilMedDrainStandv1.py  NeilMedDrainStandv2.py  README.md  VacuumCPAPTools.py  examples.md  kid_n_b.py  kid_nail.py  mk_examples_list  name_plate.py  pbox_components.py  piecad
piecad/: __init__.py  _poly_point_isect.py  _text.py  path.py  primitives_2d.py  primitives_3d.py  project_box.py  text.py  trigonometry.py  utilities.py
piecad_dir/: __init__.py  _c.py  primitives_2d.py  primitives_3d.py  utilities.py
src/: __init__.py  _c.py  _color.py  bulk_ops.py  extrude_batch.py  primitives_2d.py  primitives_3d.py  trigonometry.py  utilities.py  validation_error.py
tests/: piecad  test_2d.py  test_3d.py  test_bulk_ops.py  test_m_direct.py  test_methods.py  test_project_box.py  test_text.py  test_trig.py
(+46 files in other folders)
