[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "piecad"
authors = [{name = "Brian Sturgill", email = "codersnext@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "trimesh >= 1.26.4",
]

[project.urls]
Home = "https://github.com/briansturgill/Piecad"

[tool.flit.sdist]
include = ["html"]
exclude = [".benchmarks", "isect_segments-bentley_ottmann"]

[tool.pytest.ini_options]
pythonpath = [ "../piecad" ]
